deploy/k8s/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creeptoo-frontend-deployment
  labels:
    app: crpt-frontend
  namespace: creeptoo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crpt-frontend
  template:
    metadata:
      labels:
        app: crpt-frontend
    spec:
      containers:
      - name: crpt-frontend
        image: dkder3k/creeptoo-frontend:0.1.1
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: creeptoo-frontend-service
  namespace: creeptoo
spec:
  selector:
    app: crpt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
