deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: creeptoo
  namespace: creeptoo
spec:
  rules:
  - host: crpt.formyown.xyz
    http:
      paths:
      - backend:
          serviceName: creeptoo-backend-service
          servicePort: 8080
        path: /v1
      - backend:
          serviceName: creeptoo-frontend-service
          servicePort: 80
        path: /
